templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infrabin-deployment
  namespace: infrabin
  labels:
    app.kubernetes.io/name: infrabin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: infrabin
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app.kubernetes.io/name: infrabin
    spec:
      containers:
      - name: infrabin
        image: maruina/infrabin:fix-envoy-preflight
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
        - name: http-metrics
          containerPort: 15020
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
